# eternal-youth

./: .gitignore  analyze_results.py  battery_with_higher_current_capabilities.py  consumption_forecast.py  consumption_forecast_comparison.py  data_parser.py  data_sample.py  first_try_mpc_hennio.py  forecast_consumption.py  load_forecast_profile.py  load_forecast_tester.py  low_sweep.py  mpc_second_try_no_usage_forecast.py  new_mpc_thursday_before_christmas.py  old_mpc_friday_afternoon.py  optimizer.py  pipeline.py  plotmaker.py  plotting_mpc_with_usage.py  post-analysis.py  pyproject.toml  soh_pricing.py  sweep_penalties.py  train_config.py
data/: 2025-04-26.json  2025-04-27.json  2025-04-28.json  2025-04-30.json  2025-05-01-very-sunny.json  2025-05-02.json  2025-05-11-sunny.json  2025-06-17.json  2025-06-19.json  2025-06-22.json  2025-06-25.json  2025-08-31.json  2025-09-02.json  2025-09-03.json  2025-09-05-mixed.json  2025-11-08.json  2025-11-11.json  2025-11-13.json  2025-11-15-overcast.json  2025-11-16.json
data/days-range/: 2025-03-13.json  2025-03-14.json  2025-03-15.json  2025-03-16.json  2025-03-17.json  2025-03-18.json  2025-03-19.json  2025-03-20.json  2025-03-21.json  2025-03-22.json  2025-03-23.json  2025-03-24.json  2025-03-25.json  2025-03-26.json  2025-03-27.json  2025-03-28.json  2025-03-29.json  2025-03-30.json  2025-03-31.json  2025-04-01.json  2025-04-02.json  2025-04-03.json  2025-04-04.json  2025-04-05.json  2025-04-06.json  2025-04-07.json  2025-04-08.json  (+256 more)
data_requests/: request_data.py
forecast/: forecast_consumption.py
report/: report.tex
(+621 files in other folders)
