[project]
name = "eternal-youth"
version = "0.1.0"
description = ""
authors = [
    {name = "Dima Kochetov",email = "dima.kochetov.70@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cvxpy (>=1.7.5,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
