[project]
name = "eternal-youth"
version = "0.1.0"
description = ""
authors = [
    {name = "Dima Kochetov",email = "dima.kochetov.70@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "cvxpy (>=1.7.5,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "torch (==2.9.1)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "kaleido (>=1.2.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
